--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://ZeakOptimistic.github.io/Final-Project-of-Developing-Front-End-Apps-with-React-Course",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,8 +18,8 @@
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1",
-    "homepage": "https://github.com/ZeakOptimistic/Final-Project-of-Developing-Front-End-Apps-with-React-Course"
+    "react-redux": "^9.1.1"
+    
 
   },
   "devDependencies": {
